# ebclup

./: Cargo.toml  README.md  build.rs
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
resources/: pack.sh
resources/ebcl/: Makefile  README.md
resources/ebcl/.devcontainer/: devcontainer.json
resources/ebclfsa/: Makefile  README.md
resources/ebclfsa/images/ebclfsa/: base.yaml
resources/scratch/: README.md
resources/scratch/.devcontainer/: devcontainer.json
src/: main.rs
tests/: cli_tests.rs
