[package]
name = "ebclup"
version = "0.0.6"
edition = "2024"
description = "Kickstart EB corbos projects"
license = "MIT"
repository = "https://github.com/antonjahn/ebclup"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
clap_complete = "4.5.46"
flate2 = "1.1.0"
tar = "0.4.44"

[dev-dependencies]
assert_cmd = "2.0.16"

[build-dependencies]
